--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,38 +1,93 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
+/* Navigation Menu */
 nav {
     background-color: #333;
     color: #fff;
+    padding: 10px 0;
 }
 
 nav ul {
     list-style: none;
     display: flex;
+    justify-content: center;
     padding: 0;
 }
 
 nav li {
-    margin: 10px;
+    margin: 0 15px;
 }
 
 nav a {
     color: #fff;
     text-decoration: none;
+    transition: color 0.3s;
+}
+
+nav a:hover {
+    color: #f44336;
+}
+
+/* Highlight Current Route */
+nav .active {
+    color: #f44336;
+    font-weight: bold;
+}
+
+.home-page, .results-page {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    max-width: 300px;
+    margin: 0 auto;
+    height: 100%;
+    overflow: auto;
+}
+
+
+.input-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 input {
-    padding: 5px;
+    padding: 8px;
     margin-right: 10px;
+    flex-grow: 1;
 }
 
 button {
-    padding: 5px 10px;
+    padding: 8px 15px;
 }
 
 ul {
     list-style-type: none;
+    padding: 0;
+    width: 100%;
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+}
+
+li > span {
+    width: 30%;
+    overflow-wrap: break-word;
+}
+
+button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #d32f2f;
 }
